resources/sass/app.scss
/**
	Copyright (C) 2014  Matheus Borges Teixeira

	This is a part of Arkanos Organizer Suite (AOS) app.
	AOS is a web application for organizing personal goals.

	This program is free software: you can redistribute it and/or modify
	it under the terms of the GNU Affero General Public License as
	published by the Free Software Foundation, either version 3 of the
	License, or (at your option) any later version.

	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU Affero General Public License for more details.

	You should have received a copy of the GNU Affero General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
**/

/**
 * Sencha Default Overwrites
 */

/* Overwrite for Theme Colors */
$base-color: #238C23 !default;
$page-bg-color:linear-gradient(to bottom, rgba(255,255,255,1) 33%,rgba(150,150,150,1) 100%) !default;

/* Overwrite for Theme Font */
@font-face {
	font-family: 'KingthingsTrypewriter';
	src: url('../fonts/KingthingsTrypewriter2.ttf');
}
$font-family: 'KingthingsTrypewriter' !default;


/* Importing Sencha data */
@import 'sencha-touch/default';
@import 'sencha-touch/default/all';

/* Overwrite for overall font size */
html {
	font-size:130%;
}

/* Overwrite for Tab Icon Size */
.x-tab .x-button-icon {
	font-size: 1.3em;
}

/* Overwrite for Tab Size */
.x-tab {
	min-width: 1em;
}

/* Overwrite for Bottom Tab */
.x-tabbar.x-docked-bottom {
	height: 3.2em;
}

/* Overwrite for Bottom Tab Label*/
.x-tabbar.x-docked-bottom .x-tab .x-button-label {
	font-size: 0.45em;
	padding: 0.35em;
}

/* Overwrite for Bottom Toolbar Icon */
.x-toolbar.x-docked-bottom .x-button .x-button-icon:before {
	line-height: 0.6em;
}

/* Overwrite for Bottom Toolbar Icon*/
.x-toolbar.x-docked-bottom {
	min-height: 2em;
}

/**
 * AOS Specific Icons
 */

@font-face {
	font-family: 'PWSmallIcons';
	src: url('../fonts/PWSmallIcons.ttf');
}

@include icon("aos-icon-calendar","(","PWSmallIcons");
@include icon("aos-icon-home","2","PWSmallIcons");
@include icon("aos-icon-statistics","\2018","PWSmallIcons");
@include icon("aos-icon-logout","\60","PWSmallIcons");
@include icon("aos-icon-mainmenu","\ce","PWSmallIcons");
@include icon("aos-icon-goals","\53","PWSmallIcons");
@include icon("aos-icon-remove","\201d","PWSmallIcons");
@include icon("aos-icon-details","\46","PWSmallIcons");
@include icon("aos-icon-tasks","\4f","PWSmallIcons");
@include icon("aos-icon-edit","\59","PWSmallIcons");
@include icon("aos-icon-new","\68","PWSmallIcons");
@include icon("aos-icon-back","\73","PWSmallIcons");
@include icon("aos-icon-save","\3d","PWSmallIcons");
@include icon("aos-icon-worklog","\70","PWSmallIcons");
@include icon("aos-icon-overview","\44","PWSmallIcons");
@include icon("aos-icon-time","\79","PWSmallIcons");
@include icon("aos-icon-focus","\5f","PWSmallIcons");
@include icon("aos-icon-completion","\7a","PWSmallIcons");
@include icon("aos-icon-dedication","\3b","PWSmallIcons");
@include icon("aos-icon-productivity","\27","PWSmallIcons");
@include icon("aos-icon-information","\6a","PWSmallIcons");
@include icon("aos-icon-copyright","\2c","PWSmallIcons");
@include icon("aos-icon-about","\6b","PWSmallIcons");
@include icon("aos-icon-instructions","\25","PWSmallIcons");

/**
 * AOS Specific Styles
 */

.aos-title {
	font-size: 1em;
	font-weight: bold;
}

.aos-date {
	font-size: 0.6em;
	font-weight: bold;
	text-decoration: underline;
}

.aos-normal {
	font-size: 0.9em;
}

.aos-small {
	font-size: 0.5em;
	font-style: italic;
}

.aos-small-report {
	font-size: 0.5em;
	text-align: right;
}

.aos-small-header {
	font-size: 0.6em;
	font-weight: bold;
	text-align: center;
	padding: 0 0 0 1em;
}

.aos-goal-status {
	font-size: 0.5em;
	text-align: center;
	padding: 0 1em 0 0;
}

.aos-goal-field {
	font-size: 0.8em;
	font-weight: bold;
	padding: 0.5em;
	width: 40%;
}

.aos-goal-data {
	font-size: 0.8em;
	padding: 0.5em;
	width: 60%;
}

.aos-copyright {
	text-align: center;
}

.aos-instructions {
	text-align: justify;
}

.aos-about {
	text-align: justify;
}

